Application switched to JPA and Hibernate instead of in-memory data source